Use Jackson BOM